--- a/src/app/pages/encabezado/encabezado.component.html
+++ b/src/app/pages/encabezado/encabezado.component.html
@@ -21,7 +21,7 @@
   <div class="container">
     <nav class="nav border rounded p-3 mb-3">
       <a id="home-link" class="nav-link" href="inicio" onclick="setActiveLink('home')">Home</a> <!-- Enlace a la página de inicio (vacío para ruta predeterminada) -->
-      <a id="crear-producto-link" class="nav-link" href="crear-producto" onclick="setActiveLink('crear-producto')">Adicionar Producto</a>
+      <a id="crear-producto-link" class="nav-link" href="crear-producto" onclick="setActiveLink('crear-producto')">Adicion Producto</a>
       <a id="listado-producto-link" class="nav-link" href="listado-productos" onclick="setActiveLink('listado-productos')">Listar Productos</a>
      </nav>
      
