--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,8 +9,9 @@
             <ul id="sidebarnav">
                 <li class="user-profile">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                        <img [src]=" " alt="user" />
-                        <span class="hide-menu"> usuario.nombre  </span>
+                        <img [src]="usuario.imageUrl" alt="user" />
+                        <span class="hide-menu">{{ usuario.nombre }} </span>
+
                     </a>
                     <ul aria-expanded="false" class="collapse">
                         <li><a routerLinkActive="active" routerLink="./perfil">My Profile </a></li>
@@ -19,9 +20,9 @@
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
-                 
+                <li class="nav-small-cap">Home</li>
 
-                <li *ngFor="let item of menuItems"> 
+                <li *ngFor="let item of sidebarService.menu"> 
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
                         <i [class]="item.icono"></i>
                         <span class="hide-menu"> 
@@ -31,15 +32,18 @@
                             </span>
                         </span>
                     </a>
-
+                
                     <ul aria-expanded="false" class="collapse">
                         <li *ngFor="let subMenuItem of item.submenu">
                             <a [routerLink]="subMenuItem.url"
                                routerLinkActive="active"
                                [routerLinkActiveOptions]="{ exact: true }"> {{ subMenuItem.titulo }} </a>
+                            <!-- Aquí puedes acceder a la URL -->
+                            <!-- <span>{{ subMenuItem.url }}</span> -->
                         </li>
                     </ul>
                 </li>
+                
                 
             </ul>
         </nav>
