--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -62,10 +62,10 @@
                 <div class="row">
                     <div class="col text-danger">
 
-                      <!--   <p *ngIf="campoNoValido('nombre')">* El nombre es obligatorio</p>
+                        <p *ngIf="campoNoValido('nombre')">* El nombre es obligatorio</p>
                         <p *ngIf="campoNoValido('email')">* El email es obligatorio y tiene que ser válido</p>
                         <p *ngIf="contrasenasNoValidas()">* Las contraseñas deben de ser iguales</p>
-                        <p *ngIf="aceptaTerminos()">* Debe de aceptar los términos de uso</p> -->
+                        <p *ngIf="aceptaTerminos()">* Debe de aceptar los términos de uso</p>
 
                     </div>
                 </div>
