--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,43 +1,34 @@
-
-
-
 <div id="main-wrapper">
- 
 
-<!--     <app-sidebar></app-sidebar> -->
+    <app-header></app-header>
+
+    <app-sidebar></app-sidebar>
 
     <div class="page-wrapper">
-        
         <div class="container-fluid">
-            
             <!-- Breadcrumbs -->
-         <!--    <app-breadcrumbs></app-breadcrumbs> -->
+            <app-breadcrumbs></app-breadcrumbs>
 
             <!-- Mi sistema de rutas -->
-            <router-outlet></router-outlet>
+           
 
-            <!-- 
+            
             <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            
+                             <router-outlet></router-outlet>
                         </div>
                     </div>
                 </div>
             </div> 
-            -->
+           
 
         </div>
 
-    
+        <app-footer></app-footer>
+    </div> 
 
-    </div>
-
-
-</div>
-<!-- 
-
-<app-modal-imagen></app-modal-imagen> -->
-    <!-- ============================================================== -->
+<!-- <app-modal-imagen></app-modal-imagen> -->
+        
    
