--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -32,13 +32,13 @@
                                     id="exampleInputEmail1" 
                                     placeholder="Email"
                                     formControlName="email"
-                                    [readOnly]="">
+                                    [readOnly]="usuario.google">
                         </div>
                     </div>
                     
                     <button type="submit" 
                             class="btn btn-success btn-block waves-effect waves-light m-r-10"
-                            [disabled]="perfilForm">
+                            [disabled]="perfilForm.invalid">
                         <i class="fa fa-save"></i>
                         Guardar cambios
                     </button>
@@ -56,11 +56,12 @@
                 <h6 class="card-subtitle">Imagen del usuario</h6>
 
                 <div class="text-center">
-                    <img *ngIf="!imgTemp" [src]="" class="img-avatar">
+                    <img *ngIf="!imgTemp" [src]="usuario.imageUrl" class="img-avatar">
                     <img *ngIf="imgTemp" [src]="imgTemp" class="img-avatar">
                 </div>
 
-                <input type="file">
+                <input type="file"
+                        ( )="cambiarImagen($event.target.files[0])">
 
                 <br>
                 <br>
